[package]
name = "dmx_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dmx_test"
test = false
bench = false



[dependencies]
# Change stm32f303ze to your chip name, if necessary.
ansi_rgb = {git="https://github.com/rust-osdev/ansi_rgb.git"}

bit_field = "0.10.2"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-stm32 = { version = "0.2.0", features = [ "defmt", "stm32f746zg", "unstable-pac", "memory-x", "time-driver-tim2", "exti"]  }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "task-arena-size-10240"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-embedded-hal = "0.3.0"
embedded-hal-async = "1.0.0"
format_no_std = "1.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2"
rgb = "0.8.50"

[profile.release]
debug = 2




# 64, 128, 192, 256, 320, 384, 512, 640, 768, 1024, 1280, 1536, 2048, 2560, 3072, 4096 (default), 
# 5120, 6144, 8192, 10240, 12288, 16384, 20480, 24576, 32768, 40960, 49152, 65536, 81920, 98304, 
# 131072, 163840, 196608, 262144, 327680, 393216, 524288, 655360, 786432, 1048576, 